--- a/email/email_c.html
+++ b/email/email_c.html
@@ -312,8 +312,8 @@ ul.sidebar li a h1,ul.sidebar li a h2,ul.sidebar li a h3,ul.sidebar li a h4,ul.s
 											<td>				
 																			
 												<h5 class="">Contact Info:</h5>												
-												<p>Phone: <strong>408.341.0600</strong><br/>
-                Email: <strong><a href="emailto:hseldon@trantor.com">hseldon@trantor.com</a></strong></p>
+												<p>Phone: <strong>555.555.1234</strong><br/>
+                Email: <strong><a href="emailto:me@zachschneider.com">me@zachschneider.com</a></strong></p>
                 
 											</td>
 										</tr>
