added new layout

--- a/email/index.html
+++ b/email/index.html
@@ -9,10 +9,13 @@
 <h1>Emails</h1>
 <ul>
 	<li>
-		<a href="email_a.html" target="_blank">email_a.html</a>
+		<a href="email_a.html" target="_blank">2 Column Layout (hero, side image and text)</a>
 	</li>
 	<li>
-		<a href="email_b.html" target="_blank">email_b.html</a>
+		<a href="email_b.html" target="_blank">1 Column Layout (hero and text)</a>
+	</li>
+	<li>
+		<a href="email_b2.html" target="_blank">2 Column Layout (hero and text)</a>
 	</li>
 	<li>
 		<a href="email_c.html" target="_blank">email_c.html</a>
