--- a/email/email_b2.html
+++ b/email/email_b2.html
@@ -530,13 +530,15 @@
                                         	<td align="top">
                                         		<table border="0" cellpadding="0" cellspacing="0">
                                         			<tr>
-			                                            <td valign="top" style="padding-bottom:20px; text-align:left; width:33%;">
+			                                            <td valign="top" style="padding-bottom:20px; text-align:left; width:66%;">
 			                                            	<table border="0" cellpadding="0" cellspacing="0">
 			                                            		<tr>
 			                                            			<td valign="top" width="10%"><img src="https://cricket-wireless.s3.amazonaws.com/cfh_email/spacer.gif" style="max-width:100%;" width="70" /></td>
 			                                            			<td valign="top" class="bodyContent" style="max-width:420px; margin:0 auto; padding:15px;">
 			                                            				<h2>Nullam suscipit</h2>
 																		In et porttitor enim. Duis gravida, erat ac ultricies adipiscing, erat arcu lacinia quam, sit amet sodales magna urna a nisi. Etiam et erat sollicitudin, fermentum ligula a, sodales tortor. Suspendisse quis fringilla justo, eu placerat dui. Cras viverra mauris ac risus varius, id porta arcu convallis. Aliquam ut ligula non arcu porttitor scelerisque. Nulla aliquet cursus mi at hendrerit.
+																		<br><br>
+																		Praesent pulvinar tempor ultricies. Curabitur tincidunt massa arcu, nec ullamcorper enim suscipit ac. In molestie lorem nec pretium suscipit. Maecenas eget lacus dignissim, semper neque ornare, fermentum lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus neque eros, vestibulum vel ante vel, rutrum iaculis justo. Duis sit amet leo venenatis, convallis sem a, suscipit neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
 																	</td>
 																	<td valign="top" width="10%"><img src="https://cricket-wireless.s3.amazonaws.com/cfh_email/spacer.gif" style="max-width:100%;" width="70" /></td>
 																</tr>
@@ -550,7 +552,8 @@
 			                                            				<h2>Nullam suscipit nibh vel ultrices ultricies</h2>
 																		In et porttitor enim. Duis gravida, erat ac ultricies adipiscing, erat arcu lacinia quam, sit amet sodales magna urna a nisi. Etiam et erat sollicitudin, fermentum ligula a, sodales tortor. Suspendisse quis fringilla justo, eu placerat dui. Cras viverra mauris ac risus varius, id porta arcu convallis. Aliquam ut ligula non arcu porttitor scelerisque. Nulla aliquet cursus mi at hendrerit.
 																		<br><br>
-																		Praesent pulvinar tempor ultricies. Curabitur tincidunt massa arcu, nec ullamcorper enim suscipit ac. In molestie lorem nec pretium suscipit. Maecenas eget lacus dignissim, semper neque ornare, fermentum lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus neque eros, vestibulum vel ante vel, rutrum iaculis justo. Duis sit amet leo venenatis, convallis sem a, suscipit neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+																		<h2>Praesent pulvinar tempor ultricies</h2>
+																		Curabitur tincidunt massa arcu, nec ullamcorper enim suscipit ac. In molestie lorem nec pretium suscipit. Maecenas eget lacus dignissim, semper neque ornare, fermentum lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus neque eros, vestibulum vel ante vel, rutrum iaculis justo. Duis sit amet leo venenatis, convallis sem a, suscipit neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
 																	</td>
 																	<td valign="top" width="10%"><img src="https://cricket-wireless.s3.amazonaws.com/cfh_email/spacer.gif" style="max-width:100%;" width="70" /></td>
 																</tr>
