--- a/email/email_b2.html
+++ b/email/email_b2.html
@@ -477,6 +477,9 @@
 		td[class=footerContent] a{
 			display:block !important;
 		}
+		*[class].col2{
+			width: 100% !important; 
+		}
 
 }</style>
 </head>
@@ -527,10 +530,10 @@
 	                                        </td>
                                         </tr>
                                         <tr>
-                                        	<td align="top">
-                                        		<table border="0" cellpadding="0" cellspacing="0">
+                                        	<td align="top" width="100%">
+                                        		<table width="370" border="0" cellpadding="0" cellspacing="0" class="col2" align="left">
                                         			<tr>
-			                                            <td valign="top" style="padding-bottom:20px; text-align:left; width:66%;">
+			                                            <td valign="top" style="padding-bottom:20px; text-align:left;">
 			                                            	<table border="0" cellpadding="0" cellspacing="0">
 			                                            		<tr>
 			                                            			<td valign="top" width="10%"><img src="https://cricket-wireless.s3.amazonaws.com/cfh_email/spacer.gif" style="max-width:100%;" width="70" /></td>
@@ -544,6 +547,10 @@
 																</tr>
 															</table>
 			                                            </td>
+			                                        </tr>
+			                                    </table>
+                                        		<table width="190" border="0" cellpadding="0" cellspacing="0" class="col2" align="right">
+                                        			<tr>
 			                                            <td valign="top" style="padding-bottom:20px; text-align:left;">
 			                                            	<table border="0" cellpadding="0" cellspacing="0">
 			                                            		<tr>
