--- a/email/email_b2.html
+++ b/email/email_b2.html
@@ -531,7 +531,7 @@
                                         </tr>
                                         <tr>
                                         	<td align="top" width="100%">
-                                        		<table width="370" border="0" cellpadding="0" cellspacing="0" class="col2" align="left">
+                                        		<table width="66%" border="0" cellpadding="0" cellspacing="0" class="col2" align="left">
                                         			<tr>
 			                                            <td valign="top" style="padding-bottom:20px; text-align:left;">
 			                                            	<table border="0" cellpadding="0" cellspacing="0">
@@ -549,7 +549,7 @@
 			                                            </td>
 			                                        </tr>
 			                                    </table>
-                                        		<table width="190" border="0" cellpadding="0" cellspacing="0" class="col2" align="right">
+                                        		<table width="33%" border="0" cellpadding="0" cellspacing="0" class="col2" align="right">
                                         			<tr>
 			                                            <td valign="top" style="padding-bottom:20px; text-align:left;">
 			                                            	<table border="0" cellpadding="0" cellspacing="0">
