updated 2 column layout

--- a/email/email_b2.html
+++ b/email/email_b2.html
@@ -495,11 +495,11 @@
                                     <table border="0" cellpadding="0" cellspacing="0" width="560">
                                         <tr>
                                             <td valign="top" class="preheaderContent">
-                                                Aenean lobortis metus pharetra magna luctus!
+                                                <singleline>Aenean lobortis metus pharetra magna luctus!</singleline>
                                             </td>
                                             <!-- *|IFNOT:ARCHIVE_PAGE|* -->
                                             <td valign="top" width="275" class="preheaderContent" style="padding-left:20px;">
-                                            	Not seeing the images? <a href="*|ARCHIVE|*" target="_blank">View online</a> or on mobile device.
+                                            	<singleline>Not seeing the images? <a href="*|ARCHIVE|*" target="_blank">View online</a> or on mobile device.</singleline>
                                             </td>
                                             <!-- *|END:IF|* -->
                                         </tr>
@@ -523,7 +523,7 @@
 	                                        	<table border="0" cellpadding="0" cellspacing="0">
 	                                            	<tr>
 	                                                	<td align="center" valign="middle">
-	                                                        <img src="http://placehold.it/560x180" class="bodyImage" style="max-width:560px;">
+	                                                        <img src="http://placehold.it/560x180" class="bodyImage" editable="true" width="560" style="max-width:560px;">
 	                                                    </td>
 	                                                </tr>
 	                                            </table>
@@ -536,14 +536,18 @@
 			                                            <td valign="top" style="padding-bottom:20px; text-align:left;">
 			                                            	<table border="0" cellpadding="0" cellspacing="0">
 			                                            		<tr>
-			                                            			<td valign="top" width="10%"><img src="https://cricket-wireless.s3.amazonaws.com/cfh_email/spacer.gif" style="max-width:100%;" width="70" /></td>
+			                                            			<td valign="top" width="10%">
+			                                            				<img src="https://cricket-wireless.s3.amazonaws.com/cfh_email/spacer.gif" editable="false" style="max-width:100%;" width="70" />
+			                                            			</td>
 			                                            			<td valign="top" class="bodyContent" style="max-width:420px; margin:0 auto; padding:15px;">
-			                                            				<h2>Nullam suscipit</h2>
-																		In et porttitor enim. Duis gravida, erat ac ultricies adipiscing, erat arcu lacinia quam, sit amet sodales magna urna a nisi. Etiam et erat sollicitudin, fermentum ligula a, sodales tortor. Suspendisse quis fringilla justo, eu placerat dui. Cras viverra mauris ac risus varius, id porta arcu convallis. Aliquam ut ligula non arcu porttitor scelerisque. Nulla aliquet cursus mi at hendrerit.
+			                                            				<h2><singleline>Nullam suscipit</singleline></h2>
+																		<multiline>In et porttitor enim. Duis gravida, erat ac ultricies adipiscing, erat arcu lacinia quam, sit amet sodales magna urna a nisi. Etiam et erat sollicitudin, fermentum ligula a, sodales tortor. Suspendisse quis fringilla justo, eu placerat dui. Cras viverra mauris ac risus varius, id porta arcu convallis. Aliquam ut ligula non arcu porttitor scelerisque. Nulla aliquet cursus mi at hendrerit.
 																		<br><br>
-																		Praesent pulvinar tempor ultricies. Curabitur tincidunt massa arcu, nec ullamcorper enim suscipit ac. In molestie lorem nec pretium suscipit. Maecenas eget lacus dignissim, semper neque ornare, fermentum lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus neque eros, vestibulum vel ante vel, rutrum iaculis justo. Duis sit amet leo venenatis, convallis sem a, suscipit neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+																		Praesent pulvinar tempor ultricies. Curabitur tincidunt massa arcu, nec ullamcorper enim suscipit ac. In molestie lorem nec pretium suscipit. Maecenas eget lacus dignissim, semper neque ornare, fermentum lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus neque eros, vestibulum vel ante vel, rutrum iaculis justo. Duis sit amet leo venenatis, convallis sem a, suscipit neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</multiline>
 																	</td>
-																	<td valign="top" width="10%"><img src="https://cricket-wireless.s3.amazonaws.com/cfh_email/spacer.gif" style="max-width:100%;" width="70" /></td>
+																	<td valign="top" width="10%">
+																		<img src="https://cricket-wireless.s3.amazonaws.com/cfh_email/spacer.gif" editable="false" style="max-width:100%;" width="70" />
+																	</td>
 																</tr>
 															</table>
 			                                            </td>
@@ -554,14 +558,19 @@
 			                                            <td valign="top" style="padding-bottom:20px; text-align:left;">
 			                                            	<table border="0" cellpadding="0" cellspacing="0">
 			                                            		<tr>
-			                                            			<td valign="top" width="10%"><img src="https://cricket-wireless.s3.amazonaws.com/cfh_email/spacer.gif" style="max-width:100%;" width="70" /></td>
+			                                            			<td valign="top" width="10%">
+			                                            				<img src="https://cricket-wireless.s3.amazonaws.com/cfh_email/spacer.gif" editable="false" style="max-width:100%;" width="70" />
+			                                            			</td>
 			                                            			<td valign="top" class="bodyContent" style="max-width:420px; margin:0 auto; padding:15px;">
-			                                            				<h2>Nullam suscipit nibh vel ultrices ultricies</h2>
-																		In et porttitor enim. Duis gravida, erat ac ultricies adipiscing, erat arcu lacinia quam, sit amet sodales magna urna a nisi.<br><br>
-																		<h2>Praesent pulvinar tempor ultricies</h2>
-																		Etiam et erat sollicitudin, fermentum ligula a, sodales tortor. Suspendisse quis fringilla justo, eu placerat dui. Cras viverra mauris ac risus varius, id porta arcu convallis. Aliquam ut ligula non arcu porttitor scelerisque.
+			                                            				<h2><singleline>Nullam suscipit nibh vel ultrices ultricies</singleline></h2>
+																		<multiline>In et porttitor enim. Duis gravida, erat ac ultricies adipiscing, erat arcu lacinia quam, sit amet sodales magna urna a nisi.</multiline>
+																		<br><br>
+																		<h2><singleline>Praesent pulvinar tempor ultricies</singleline></h2>
+																		<multiline>Etiam et erat sollicitudin, fermentum ligula a, sodales tortor. Suspendisse quis fringilla justo, eu placerat dui. Cras viverra mauris ac risus varius, id porta arcu convallis. Aliquam ut ligula non arcu porttitor scelerisque.</multiline>
 																	</td>
-																	<td valign="top" width="10%"><img src="https://cricket-wireless.s3.amazonaws.com/cfh_email/spacer.gif" style="max-width:100%;" width="70" /></td>
+																	<td valign="top" width="10%">
+																		<img src="https://cricket-wireless.s3.amazonaws.com/cfh_email/spacer.gif" editable="false" style="max-width:100%;" width="70" />
+																	</td>
 																</tr>
 															</table>
 			                                            </td>
@@ -570,7 +579,7 @@
 			                                </td>
 			                                <tr>
                                         	<td valign="top">
-                                        		<img src="http://placehold.it/560x180" alt="" style="max-width:100%;" />
+                                        		<img src="http://placehold.it/560x180" alt="" editable="true" width="560" style="max-width:100%;" />
                                         	</td>
                                         </tr>
                                     </table>
@@ -598,7 +607,7 @@
                                                     </tr>
                                                     <tr>
                                                     	<td valign="top" class="footerContent" style="padding-top:20px;">
-                                                        	<a href="*|UNSUB|*">unsubscribe from this list</a>&nbsp;&nbsp;
+                                                        	<unsubscribe>unsubscribe from this list</unsubscribe>&nbsp;&nbsp;
                                                         	<a href="*|UPDATE_PROFILE|*">update subscription preferences</a>&nbsp;&nbsp;
                                                         	<a href="*|ARCHIVE|*" target="_blank">view email in browser</a>&nbsp;
                                                         </td>
