--- a/email/index.html
+++ b/email/index.html
@@ -14,9 +14,12 @@
 	<li>
 		<a href="email_b.html" target="_blank">1 Column Layout (hero and text)</a>
 	</li>
-	<li>
-		<a href="email_b2.html" target="_blank">2 Column Layout (hero and text)</a>
-	</li>
+  <li>
+    <a href="email_b2.html" target="_blank">2 Column Layout (hero and text)</a>
+  </li>
+  <li>
+    <a href="email_b2.2.html" target="_blank">2 Column Layout that breaks differently</a>
+  </li>
 </ul>
 </body>
 </html>
