--- a/email/index.html
+++ b/email/index.html
@@ -27,6 +27,9 @@
           <li>
             <a href="email_b2.2.html" target="_blank">2 Column Layout that breaks differently</a>
           </li>
+          <li>
+            <a href="email_b2.3.html" target="_blank">2 Column Layout with distinctive sidebar (Newsletter template)</a>
+          </li>
         </ul>
 
       </div>
