--- a/email/email_b2.3.html
+++ b/email/email_b2.3.html
@@ -531,97 +531,101 @@
                   </tr>
                   <tr>
                     <td align="top" width="100%">
-                      <table width="66.9%" border="0" cellpadding="0" cellspacing="0" class="col2" align="left" bgcolor="">
+
+                      <table width="66%" border="0" cellpadding="0" cellspacing="0" class="col2" align="left" bgcolor="">
                         <tr>
                           <td valign="top" style="padding:0; text-align:left;">
                             <table border="0" cellpadding="0" cellspacing="0">
                               <tr>
-                              <td valign="top" width="2%">
-                                  <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="70" />
+                                <td valign="top" width="2%">
+                                  <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" alt="" />
                                 </td>
                                 <td valign="top" class="bodyContent" style="max-width:420px; margin:0; padding:15px;">
-                                  <img src="http://placehold.it/329x180" class="bodyImage" editable="true" width="329" style="max-width:100%;">
+                                  <img src="http://placehold.it/329x180" class="bodyImage" editable="true" width="329" style="max-width:100%;" alt="" />
                                   <br /><br />
                                   <h2><singleline style="line-height:1;">Nullam suscipit</singleline></h2>
-                                  <multiline style="line-height:1.2; color:#111">In et porttitor enim. Duis gravida, erat ac ultricies adipiscing, erat arcu lacinia quam, sit amet sodales magna urna a nisi. Etiam et erat sollicitudin, fermentum ligula a, sodales tortor. Suspendisse quis fringilla justo, eu placerat dui. Cras viverra mauris ac risus varius, id porta arcu convallis. Aliquam ut ligula non arcu porttitor scelerisque. Nulla aliquet cursus mi at hendrerit.
-                                  <br /><br />
-                                  <a href="#" style="color:#111">This is a link »</a></multiline>
+                                  <multiline style="line-height:1.2; color:#111">In et porttitor enim. Duis gravida, erat ac ultricies adipiscing, erat arcu lacinia quam, sit amet sodales magna urna a nisi. Etiam et erat sollicitudin, fermentum ligula a, sodales tortor. Suspendisse quis fringilla justo, eu placerat dui. Cras viverra mauris ac risus varius, id porta arcu convallis. Aliquam ut ligula non arcu porttitor scelerisque. Nulla aliquet cursus mi at hendrerit.<br /><br />
+                                    <a href="#" style="color:#111">This is a link »</a></multiline>
                                   </td>
                                   <td valign="top" width="1%">
-                                    <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="70" />
+                                    <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="" alt="" />
                                   </td>
                                 </tr>
-                              <tr>
-                              <td valign="top" width="2%">
-                                  <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="70" />
-                                </td>
-                                <td valign="top" class="bodyContent" style="max-width:420px; margin:0; padding:15px;">
-                                  <img src="http://placehold.it/329x180" class="bodyImage" editable="true" width="329" style="max-width:100%;">
-                                  <br /><br />
-                                  <h2><singleline style="line-height:1;">Nullam suscipit</singleline></h2>
-                                  <multiline style="line-height:1.2; color:#111">In et porttitor enim. Duis gravida, erat ac ultricies adipiscing, erat arcu lacinia quam, sit amet sodales magna urna a nisi. Etiam et erat sollicitudin, fermentum ligula a, sodales tortor. Suspendisse quis fringilla justo, eu placerat dui. Cras viverra mauris ac risus varius, id porta arcu convallis. Aliquam ut ligula non arcu porttitor scelerisque. Nulla aliquet cursus mi at hendrerit.
-                                  <br /><br />
-                                  <a href="#" style="color:#111">This is a link »</a></multiline>
-                                  </td>
-                                  <td valign="top" width="1%">
-                                    <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="70" />
-                                  </td>
-                                </tr>
-                              </table>
-                            </td>
-                          </tr>
-                        </table>
-                        <table width="33%" border="0" cellpadding="0" cellspacing="0" class="col2" align="right" bgcolor="orange">
-                          <tr>
-                            <td valign="top" style="padding:0; text-align:left;">
-                              <table border="0" cellpadding="0" cellspacing="0">
+
                                 <tr>
-                                  <td valign="top" width="1%">
-                                    <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="70" />
-                                  </td>
-                                  <td valign="top" class="bodyContent" style="max-width:100%; margin:0; padding:15px;">
-                                    <img src="http://placehold.it/149x90" class="bodyImage" editable="true" width="149" style="max-width:100%;">
-                                    <br /><br />
-                                    <h2><singleline style="line-height:1">Nullam suscipit nibh vel ultrices ultricies</singleline></h2>
-                                    <multiline style="line-height:1.2; color:#111">In et porttitor enim. Duis gravida, erat ac ultricies adipiscing, erat arcu lacinia quam, sit amet sodales magna urna a nisi. <br /> <a href="#">This is a link »</a></multiline>
-                                  </td>
                                   <td valign="top" width="2%">
-                                    <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="70" />
+                                    <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" alt="" />
                                   </td>
-                                </tr>
-                                <tr>
-                                  <td valign="top" width="1%">
-                                    <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="70" />
-                                  </td>
-                                  <td valign="top" class="bodyContent" style="max-width:100%; margin:0; padding:15px;">
-                                    <img src="http://placehold.it/149x90" class="bodyImage" editable="true" width="149" style="max-width:100%;">
+                                  <td valign="top" class="bodyContent" style="max-width:420px; margin:0; padding:15px;">
+                                    <img src="http://placehold.it/329x180" class="bodyImage" editable="true" width="329" style="max-width:100%;" alt="" />
                                     <br /><br />
-                                    <h2><singleline style="line-height:1">Nullam suscipit nibh vel ultrices ultricies</singleline></h2>
-                                    <multiline style="line-height:1.2; color:#111">In et porttitor enim. Duis gravida, erat ac ultricies adipiscing, erat arcu lacinia quam, sit amet sodales magna urna a nisi. <br /> <a href="#">This is a link »</a></multiline>
-                                  </td>
-                                  <td valign="top" width="2%">
-                                    <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="70" />
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td valign="top" width="1%">
-                                    <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="70" />
-                                  </td>
-                                  <td valign="top" class="bodyContent" style="max-width:100%; margin:0; padding:15px;">
-                                    <img src="http://placehold.it/149x90" class="bodyImage" editable="true" width="149" style="max-width:100%;">
-                                    <br /><br />
-                                    <h2><singleline style="line-height:1">Nullam suscipit nibh vel ultrices ultricies</singleline></h2>
-                                    <multiline style="line-height:1.2; color:#111">In et porttitor enim. Duis gravida, erat ac ultricies adipiscing, erat arcu lacinia quam, sit amet sodales magna urna a nisi. <br /> <a href="#">This is a link »</a></multiline>
-                                  </td>
-                                  <td valign="top" width="2%">
-                                    <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="70" />
-                                  </td>
-                                </tr>
-                              </table>
-                            </td>
-                          </tr>
-                        </table>
-                      </td>
+                                    <h2><singleline style="line-height:1;">Nullam suscipit</singleline></h2>
+                                    <multiline style="line-height:1.2; color:#111">In et porttitor enim. Duis gravida, erat ac ultricies adipiscing, erat arcu lacinia quam, sit amet sodales magna urna a nisi. Etiam et erat sollicitudin, fermentum ligula a, sodales tortor. Suspendisse quis fringilla justo, eu placerat dui. Cras viverra mauris ac risus varius, id porta arcu convallis. Aliquam ut ligula non arcu porttitor scelerisque. Nulla aliquet cursus mi at hendrerit.<br /><br />
+                                      <a href="#" style="color:#111">This is a link »</a></multiline>
+                                    </td>
+                                    <td valign="top" width="1%">
+                                      <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="" alt="" />
+                                    </td>
+                                  </tr>
+                                </table>
+                              </td>
+                            </tr>
+                          </table>
+
+
+                          <table width="33%" border="0" cellpadding="0" cellspacing="0" class="col2" align="right" bgcolor="orange">
+                            <tr>
+                              <td valign="top" style="padding:0; text-align:left;">
+                                <table border="0" cellpadding="0" cellspacing="0">
+                                  <tr>
+                                    <td valign="top" width="1%">
+                                      <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="" />
+                                    </td>
+                                    <td valign="top" class="bodyContent" style="max-width:100%; margin:0; padding:15px;">
+                                      <img src="http://placehold.it/149x90" class="bodyImage" editable="true" width="149" style="max-width:100%;">
+                                      <br /><br />
+                                      <h2><singleline style="line-height:1">Nullam suscipit nibh vel ultrices ultricies</singleline></h2>
+                                      <multiline style="line-height:1.2; color:#111">In et porttitor enim. Duis gravida, erat ac ultricies adipiscing, erat arcu lacinia quam, sit amet sodales magna urna a nisi. <br /> <a href="#">This is a link »</a></multiline>
+                                    </td>
+                                    <td valign="top" width="2%">
+                                    <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="" />
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td valign="top" width="1%">
+                                      <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="" />
+                                    </td>
+                                    <td valign="top" class="bodyContent" style="max-width:100%; margin:0; padding:15px;">
+                                      <img src="http://placehold.it/149x90" class="bodyImage" editable="true" width="149" style="max-width:100%;">
+                                      <br /><br />
+                                      <h2><singleline style="line-height:1">Nullam suscipit nibh vel ultrices ultricies</singleline></h2>
+                                      <multiline style="line-height:1.2; color:#111">In et porttitor enim. Duis gravida, erat ac ultricies adipiscing, erat arcu lacinia quam, sit amet sodales magna urna a nisi. <br /> <a href="#">This is a link »</a></multiline>
+                                    </td>
+                                    <td valign="top" width="2%">
+                                      <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="" />
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td valign="top" width="1%">
+                                      <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="" />
+                                    </td>
+                                    <td valign="top" class="bodyContent" style="max-width:100%; margin:0; padding:15px;">
+                                      <img src="http://placehold.it/149x90" class="bodyImage" editable="true" width="149" style="max-width:100%;">
+                                      <br /><br />
+                                      <h2><singleline style="line-height:1">Nullam suscipit nibh vel ultrices ultricies</singleline></h2>
+                                      <multiline style="line-height:1.2; color:#111">In et porttitor enim. Duis gravida, erat ac ultricies adipiscing, erat arcu lacinia quam, sit amet sodales magna urna a nisi. <br /> <a href="#">This is a link »</a></multiline>
+                                    </td>
+                                    <td valign="top" width="2%">
+                                      <img src="https://zoke-email.s3.amazonaws.com/spacer.gif" editable="false" style="max-width:100%;" width="" />
+                                    </td>
+                                  </tr>
+                                </table>
+                              </td>
+                            </tr>
+                          </table>
+
+                        </td>
+                      </tr>
                       <tr>
                         <td valign="top">
                           <img src="http://placehold.it/560x180" alt="" editable="true" width="560" style="max-width:100%;" />
